--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "cli"
   ],
   "scripts": {
-    "test": "standard && node test"
+    "test": "standard && node test",
+    "test:ci": "standard && node test"
   },
   "author": "Marc Bachmann <marc.brookman@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "borderless-table": "^2.0.0",
-    "umzug": "^2.0.0",
-    "yargs-parser": "^7.0.0"
+    "umzug": "2.1.0",
+    "yargs-parser": "^20.2.7"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
