--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "borderless-table": "^2.0.0",
-    "umzug": "2.1.0",
+    "umzug": "^2.3.0",
     "yargs-parser": "^20.2.7"
   },
   "devDependencies": {
